<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eu.execom.workshop.execomscheduler.activities.AddTaskActivity">


    <EditText
        android:id="@+id/add_task_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/task_title"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/add_task_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:gravity="top"
        android:hint="@string/task_description"
        android:inputType="textCapSentences|textMultiLine"
        android:scrollHorizontally="false" />

    <Button
        android:id="@+id/add_task_button"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/add_task" />

</LinearLayout>
